--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "webpack": "^1.3.2-beta9",
     "webpack-dev-server": "^1.4.7",
     "grunt-concurrent": "^0.5.0",
-    "grunt-npm-install": "^0.1.0"
+    "grunt-npm-install": "^0.1.0",
+    "html2jade": "^0.7.8"
   },
   "devDependencies": {
     "grunt-browserify": "^2.1.4"
