--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "webpack-dev-server": "^1.4.7",
     "grunt-concurrent": "^0.5.0",
     "grunt-npm-install": "^0.1.0",
-    "html2jade": "^0.7.8"
+    "html2jade": "^0.7.8",
+    "grunt-nodemon": "^0.3.0"
   },
   "devDependencies": {
     "grunt-browserify": "^2.1.4"
