--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.7.1",
     "coffeeify": "^0.6.0",
+    "convert-source-map": "^0.3.5",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.4",
     "grunt-coffeeify": "^0.1.3",
+    "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-concat": "^0.5.0",
@@ -32,9 +34,13 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html-build": "^0.3.2",
     "grunt-karma": "^0.8.3",
+    "grunt-ng-annotate": "^0.3.2",
+    "grunt-nodemon": "^0.3.0",
+    "grunt-npm-install": "^0.1.0",
     "grunt-shell": "^0.7.0",
     "grunt-webpack": "^1.0.7",
     "has-color": "^0.1.7",
+    "html2jade": "^0.7.8",
     "jade": "^1.5.0",
     "jadeify": "^2.5.0",
     "jquery": "^2.1.1",
@@ -52,11 +58,7 @@
     "teacup": "^0.4.1",
     "template-html-loader": "0.0.2",
     "webpack": "^1.3.2-beta9",
-    "webpack-dev-server": "^1.4.7",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-npm-install": "^0.1.0",
-    "html2jade": "^0.7.8",
-    "grunt-nodemon": "^0.3.0"
+    "webpack-dev-server": "^1.4.7"
   },
   "devDependencies": {
     "grunt-browserify": "^2.1.4"
