--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-stylus": "^0.17.0",
+    "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html-build": "^0.3.2",
     "grunt-karma": "^0.8.3",
